package sys.stamp;
import "sys/stamp/Person.proto";
import "monad/rpc/protocol/command.proto";

option java_package = "nirvana.hall.protocol.sys.stamp";

option java_outer_classname = "SavePersonProto";

//人员保存请求
message SavePersonRequest {
    extend monad.rpc.protocol.BaseCommand {
        optional SavePersonRequest cmd = 10231;
    }
    required string personInfo = 1;
}

message SavePersonResponse {
    extend monad.rpc.protocol.BaseCommand {
        optional SavePersonResponse cmd = 10232;
    }
    repeated PersonInfo personInfo = 1;
}